Enhance application packaging and update user interface elements
- Added Maven Shade Plugin to create a fat JAR for easier distribution and execution.
- Updated README.md with instructions for running the application from the fat JAR.
- Improved user interface in multiple FXML files by adding a logout label next to the avatar button for better clarity and user experience.
- Updated binary database file to reflect recent changes.